--- a/templates/applications/snippets/cards.html
+++ b/templates/applications/snippets/cards.html
@@ -52,7 +52,7 @@
         </div>
 		
 <!-- Start of answer DIV -->
-        <div id="answer"> 
+        <div id="contribution"> 
 
           <!-- The search form -->
           <form id="oclc_search_form" role="form" class="padding-bottom">
