--- a/templates/applications/task_scheduler.html
+++ b/templates/applications/task_scheduler.html
@@ -17,7 +17,7 @@
                 <ul class="padding-bottom-sm">
                     <li><strong>{{_('Default')}}</strong> {{_('or')}}
                     <strong>{{_('Depth First')}}</strong>: returns the first task that has not been completed.</li>
-                    <li><strong>{{_('Breadth First')}}</strong>: returns a task with the least number of answers.</li>
+                    <li><strong>{{_('Breadth First')}}</strong>: returns a task with the least number of contributions.</li>
                     <li><strong>{{_('Random')}}</strong>: returns a random task - a user could get the same task more than once.</li>
                 </ul>
 
