--- a/templates/applications/task_settings.html
+++ b/templates/applications/task_settings.html
@@ -28,13 +28,13 @@
                 <div class="row">
                     <div id="task_delete" class="col-sm-6 well">
                         <h2><i class="glyphicon glyphicon-remove"></i> {{_('Delete Tasks')}}</h2>
-                        <p>{{_('Delete all the tasks and associated answers')}}</p>
+                        <p>{{_('Delete all the tasks and associated contributions')}}</p>
                         <a href="{{url_for('project.delete_tasks', short_name=project.short_name)}}" class="btn btn-danger">{{_('Delete')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
                     </div>
                     <div id="task_redundancy" class="col-sm-6 well">
                         <h2><i class="glyphicon glyphicon-repeat"></i> {{_('Task Redundancy')}}</h2>
                         <p>{{_('Change the redundancy level for the tasks')}}</p>
-                        <a href="{{url_for('project.task_n_answers', short_name=project.short_name)}}" class="btn btn-danger">{{_('Redundancy')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
+                        <a href="{{url_for('project.task_n_contributions', short_name=project.short_name)}}" class="btn btn-danger">{{_('Redundancy')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
                     </div>
                 </div>
             </div><!-- col-sm-9 -->
