--- a/templates/applications/tasks_browse.html
+++ b/templates/applications/tasks_browse.html
@@ -21,7 +21,7 @@
                             {% else %}
                             {{_('Task')}} <span class="label label-info">#{{ t.id }}</span>
                             {% endif %}
-                             {{ t.n_task_runs }} {{_('of')}} {{ t.n_answers }} answers
+                             {{ t.n_task_runs }} {{_('of')}} {{ t.n_contributions }} contributions
                         </div>
                         {% if task_pct >= 100 %}
                         <div class="progress progress-success progress-striped col-md-5 remove-margin-bottom remove-padding"> 
