--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -53,7 +53,7 @@
         <div class="row padding-bottom">
             <div class="col-xs-12">
                 <div class="white-rounded inset-shadow-white">
-                    <h3 class="text-center">Raw answer data</h3>
+                    <h3 class="text-center">Raw contribution data</h3>
                         <table class="table table-stripped table-condensed table-hover table-responsive">
                         <thead>
                             <tr>
