--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -22,7 +22,7 @@
                                 <tr>
                                     <th class="text-center">{{ _('Rank') }}</th>
                                     <th>{{ _('Name') }}</th>
-                                    <th class="text-center">{{ _('Answers') }}</th>
+                                    <th class="text-center">{{ _('Contributions') }}</th>
                                 </tr>
                             </thead>
                             <tbody>
