--- a/templates/applications/export.html
+++ b/templates/applications/export.html
@@ -29,7 +29,7 @@
                                 <a href="{{url_for('project.export_to', short_name=project.short_name, type='task_run', format='csv')}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-file-excel-o fa-4x"></i> 
-                                        <h3  class="margin-bottom-xs">{{_('Answers (CSV)')}}</h3>
+                                        <h3  class="margin-bottom-xs">{{_('Contributions (CSV)')}}</h3>
                                     </div>
                                 </a>
                             </div>
@@ -45,7 +45,7 @@
                                 <a href="{{url_for('project.export_to', short_name=project.short_name, type='task_run', format='json')}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-code fa-4x"></i> 
-                                        <h3  class="margin-bottom-xs">{{_('Answers (JSON)')}}</h3>
+                                        <h3  class="margin-bottom-xs">{{_('Contributions (JSON)')}}</h3>
                                     </div>
                                 </a>
                             </div>
