--- a/templates/applications/stats.html
+++ b/templates/applications/stats.html
@@ -44,7 +44,7 @@
                        <div class="row padding-bottom-sm">
                            <div class="col-xs-12">
                                <div class="white-rounded inset-shadow-white chart">
-                                   <h4 class="text-center padding-bottom-sm">Distribution of Answers per Hour</h4>
+                                   <h4 class="text-center padding-bottom-sm">Contributions per Hour</h4>
                                    <div id="hourly-chart">
                                        <canvas id="hourly" style="max-height:300px;"></canvas>
                                    </div>
@@ -55,7 +55,7 @@
                        <div class="row padding-bottom-sm">
                            <div class="col-xs-12">
                                <div class="white-rounded inset-shadow-white chart">
-                                   <h4 class="text-center padding-bottom-sm">Distribution of Answers per Day</h4>
+                                   <h4 class="text-center padding-bottom-sm">Contributions per Day</h4>
                                    <div id="daily-chart">
                                        <canvas id="daily" style="max-height:300px;"></canvas>
                                    </div>
@@ -129,7 +129,7 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
             labels: houreyLabels,
             datasets: [
                 {
-                    label: "Answers per Hour",
+                    label: "Contributions per Hour",
                     fillColor: "rgba(151,187,205,0.2)",
                     strokeColor: "rgba(151,187,205,1)",
                     pointColor: "rgba(151,187,205,1)",
@@ -143,7 +143,7 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
         $("#hourly").attr("width", $('#hourly-chart').width());
         $("#hourly").attr("height", 300);
         var ctx = $("#hourly")[0].getContext("2d");
-        var opts = {pointHitDetectionRadius : 1,tooltipTemplate: "<%if(label)\u007B%><%=label%> : <%}%><%=value%> <%if(value != 1)\u007B%>answers<%}else\u007B%>answer<%}%>"};
+        var opts = {pointHitDetectionRadius : 1,tooltipTemplate: "<%if(label)\u007B%><%=label%> : <%}%><%=value%> <%if(value != 1)\u007B%>contributions<%}else\u007B%>contribution<%}%>"};
         var hourlyChart = new Chart(ctx).Line(data, opts);
         hourlyChart.draw();
         
@@ -160,7 +160,7 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
             labels: dailyLabels,
             datasets: [
                 {
-                    label: "Answers per Hour",
+                    label: "Contributions per Hour",
                     fillColor: "rgba(151,187,205,0.2)",
                     strokeColor: "rgba(151,187,205,1)",
                     pointColor: "rgba(151,187,205,1)",
@@ -174,7 +174,7 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
         $("#daily").attr("width", $('#daily-chart').width());
         $("#daily").attr("height", 300);
         var ctx = $("#daily")[0].getContext("2d");
-        var opts = {pointHitDetectionRadius : 1,tooltipTemplate: "<%if(label)\u007B%><%=label%> : <%}%><%=value%> <%if(value != 1)\u007B%>answers<%}else\u007B%>answer<%}%>"};
+        var opts = {pointHitDetectionRadius : 1,tooltipTemplate: "<%if(label)\u007B%><%=label%> : <%}%><%=value%> <%if(value != 1)\u007B%>contributions<%}else\u007B%>contribution<%}%>"};
         var dailyChart = new Chart(ctx).Line(data, opts);
         dailyChart.draw();
         
@@ -238,7 +238,7 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
         $("#top-users").attr("width", $('#top-users-chart').width());
         $("#top-users").attr("height", 300);
         var ctx = $("#top-users")[0].getContext("2d");
-        var opts = {labelLength:8,tooltipTemplate: "<%if(label)\u007B%><%=label%> : <%}%><%=value%> <%if(value != 1)\u007B%>answers<%}else\u007B%>answer<%}%>"};
+        var opts = {labelLength:8,tooltipTemplate: "<%if(label)\u007B%><%=label%> : <%}%><%=value%> <%if(value != 1)\u007B%>contributions<%}else\u007B%>contribution<%}%>"};
         var topUsersChart = new Chart(ctx).Bar(data, opts);
         topUsersChart.draw();
         topUsersChart.datasets[0].bars[highScore].fillColor = "rgba(186,0,0,0.1)";
@@ -272,7 +272,7 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
             labels: ['Monday','Tuesday','Wednesday','Thursday','Friday','Saturday','Sunday'],
             datasets: [
                 {
-                    label: "Authenticated (" + authSum + " total answers)",
+                    label: "Authenticated (" + authSum + " total contributions)",
                     fillColor: "rgba(151,187,205,0.2)",
                     strokeColor: "rgba(151,187,205,1)",
                     pointColor: "rgba(151,187,205,1)",
@@ -282,7 +282,7 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
                     data: authData
                 },
                 {
-                    label: "Anonymous (" + anonSum + " total answers)",
+                    label: "Anonymous (" + anonSum + " total contributions)",
                     fillColor: "rgba(150,150,150,0.2)",
                     strokeColor: "rgba(150,150,150,1)",
                     pointColor: "rgba(150,150,150,1)",
@@ -295,7 +295,7 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
         };
         var canvas = document.getElementById("dow");
         var ctx = $("#dow")[0].getContext("2d");
-        var opts = {populateSparseData:true, multiTooltipTemplate: " <%=value%> answer<%if(value != 1)\u007B%>s<%}%>"};
+        var opts = {populateSparseData:true, multiTooltipTemplate: " <%=value%> contribution<%if(value != 1)\u007B%>s<%}%>"};
         var dowChart = new Chart(ctx).Radar(data, opts);
         var dowLegendHolder = document.getElementById('dow-legend')
         canvas.parentNode.parentNode.appendChild(dowLegendHolder.firstChild);
