--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav">
               <li class="nav-link {% if active_page == 'projects' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('project.index') }}">{{ _('Projects') }}</a></li>
               <li class="nav-link {% if active_page == 'about' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('home.about')}}">{{ _('About') }}</a></li>
-              <li class="nav-link {% if active_page == 'globalstats' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('stats.index')}}">{{ _('Statistics') }}</a></li>
+              <li class="nav-link {% if active_page == 'globalstats' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('statistics.index')}}">{{ _('Statistics') }}</a></li>
               <li class="nav-link {% if active_page == 'community' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('account.index')}}">{{ _('Community') }}</a></li>
               <li class="nav-link {% if active_page == 'data' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('data.index')}}">{{ _('Data') }}</a></li>
          </ul>
