Remove unused chart js from project stats page

--- a/templates/projects/stats.html
+++ b/templates/projects/stats.html
@@ -110,7 +110,7 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
 <script>
     $(function(){
         $('.hidden-container').slideDown('slow');
-        var projectstats = {{projectstats|safe}};
+        var projectstats = {{appStats|safe}};
         console.log(projectstats);
         
         $dow = {{dailyActivity|safe}}['dow'];
@@ -179,38 +179,10 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
         dailyChart.draw();
         
         //Task status
-        var completed = {{stats.n_tasks_completed|safe}};
-        var ongoing = {{stats.n_tasks_ongoing|safe}};
-        var total = ongoing + completed;
-        var label1 = "Remaining : " + Math.round(ongoing/total*100) + "% (" + ongoing + " task";
-        if (userData['values'][1]['value'][1] != 1) {
-            label1 += "s"
-        }
-        label1 += ")";
-        var label2 = "Completed : " + Math.round(completed/total*100) + "% (" + completed + " task";
-        if (completed != 1) {
-            label2 += "s"
-        }
-        label2 += ")";
-        var data = [
-        {
-            value: ongoing,
-            color: "rgba(151,187,205,1)",
-            highlight: "rgba(151,187,205,0.8)",
-            label: label1
-        },
-        {
-            value : completed,
-            color:"#BA0000",
-            highlight: "#D00000",
-            label: label2
-        }
-        ];
-        var canvas = document.getElementById("task-status");
-        var ctx = canvas.getContext("2d");
-        var taskStatusChart = new Chart(ctx).Doughnut(data);
-        var legendHolder = document.getElementById('task-status-legend')
-        canvas.parentNode.parentNode.appendChild(legendHolder.firstChild);
+        var completed = {{n_completed_tasks|safe}};
+        var ongoing = {{overall_progress|safe}};
+        console.log(completed);
+        console.log(ongoing);
         
         //Top users
         var users = [];
