Nora update of text to About Page

--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -10,26 +10,32 @@
             <div class="col-md-11">
                 <h1 class="inset-text-grey">About</h1>
                 
-                <p class="lead">While the British Library is relatively young for a national library, its history stretches back until
-                long before computers were used for cataloguing as standard. The library's online database,
-                <a href="http://explore.bl.uk/" target="_blank">Explore</a>, provides public access to nearly 57 million records.
-                However, there are many important research items that can currently only be found by searching...</p>
-                
-                <p class="lead">Blah, blah, blah...this section will be updated soon with something more specific to the card catalogues :)</p>
-                    
-                <p>Each project contains a collection of tasks related to a specific area of research. These are tasks that can be
-                accurately processed by computers, they require human intelligence. Each individual task can usually be completed quickly,
-                yet the collections of tasks are often vast. Therefore, the only feasible way to complete such a number of tasks
-                within a reasonable length of time is via widespread user contributions.</p>
-                    
-                <p>By participating you will have a direct impact on the availability of research material to anyone interested in
-                the diverse collections available at the British Library. Records matched, located, transcribed or translated as part of
-                one of our crowd-sourcing projects will be uploaded to the British Library's catalogues. These catalogues
-                are free for anyone to search online in their entirety.</p>
+                <p class="lead">LibCrowds, in association with BL Labs, is a British Library crowd-sourcing experiment focused on making important research materials at the British Library
+				more readily available to a wider audience.</p> 
+				</div>
+        </div>
+    </section>
+    <section class="white pattern-white-wall box-shadow-white-bottom">
+        <div class="container container-padded">
+            <div class="col-md-11 padding-bottom-sm">
+                <h2>{{ _('Current Project: Convert-a-Card') }}</h2>
+			
+				<p>In our first project series, Convert-a-Card, we're focusing on liberating collection items discoverable only through our physical card catalogues onsite. </p>
+				
+				<p>While the <a href="http://www.bl.uk/aboutus/quickinfo/facts/history/" target="_blank">British Library</a> is relatively young for a national library, 
+				much of its vast historical collections were acquired before computers were used for cataloguing as standard. So while the library's online catalogue 
+                <a href="http://explore.bl.uk/" target="_blank">Explore</a> provides public access to nearly 57 million records,
+                there are thousands of important research items that can still only be found by searching the old physical card catalogues onsite.</p>
+                                                                           
+                <p>Records matched, located, transcribed or translated as part of Convert-a-Card will be uploaded to the
+				<a href="http://explore.bl.uk/" target="_blank">British Library's Explore catalogue</a> for anyone to search online. By participating you will have a direct impact on the availability of research material to anyone interested in
+                the diverse collections available at the British Library. </p>
+				
+				<p>Let's <a href="http://www.libcrowds.com/projects.hml" target="_blank">get started</a>!</P>
             </div>
         </div>
     </section>
-                   
+                    
     <section class="white pattern-white-wall box-shadow-white-bottom">
         <div class="container container-padded">
             <div class="col-md-11 padding-bottom-sm">
