Nora updated the text.
Included a bit imploring people to use the images to further research.

--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -18,7 +18,10 @@
                 <p class="lead">This page contains all of the datasets collected from, and images used within,
                 the crowdsourcing projects on this platform. Everything on this page is made available
                 under <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">CC0</a>, meaning that
-                it can be used without any copyright restrictions.</p>
+                it can be used without any copyright restrictions.</p> 
+				<p> We at <a href="http://labs.bl.uk/">BL Labs</a> are very keen for these materials to be used in innovative ways to further research into new technologies.
+				The digitised catalogue cards used in Convert-a-Card for instance might prove useful for testing pattern recognition applications such as multi-lingual and hand-writing OCR technologies, or even knew approaches to crowdsourcing transcription!  
+				Feel free to contact <a href="mailto:labs@bl.uk">labs@bl.uk</a> if you have any further enquiries or would simply like to tell us about how you've made further use of them.</p> 
             </div>
         </div>
     </section>
