--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -17,12 +17,12 @@
                 <div class="input-group">
                 <input id="user" name="user" type="text" class="search-query form-control" placeholder="Enter full name or username">
                 <span class="input-group-btn">
-                    <button type="submit" class="btn btn-default form-control search-button"><i class="glyphicon glyphicon-search"></i> {{ _('Search') }}</button>
+                    <button type="submit" class="btn btn-default form-control search-button"><i class="glyphicon glyphicon-search"></i></button>
                 </span>
                 </div>
                 </form>
                 {% if found %}
-                <h2>{{ _('Results') }}</h2>
+                <h2 class="padding-top-sm">{{ _('Results') }}</h2>
                 <table class="table table-stripped table-condensed table-hover table-responsive">
                     <thead>
                         <tr>
