Answers still used instead of contributions in some places

--- a/templates/projects/task_settings.html
+++ b/templates/projects/task_settings.html
@@ -34,7 +34,7 @@
                     <div id="task_redundancy" class="col-sm-6 well">
                         <h2><i class="glyphicon glyphicon-repeat"></i> {{_('Task Redundancy')}}</h2>
                         <p>{{_('Change the redundancy level for the tasks')}}</p>
-                        <a href="{{url_for('project.task_n_contributions', short_name=project.short_name)}}" class="btn btn-danger">{{_('Redundancy')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
+                        <a href="{{url_for('project.task_n_answers', short_name=project.short_name)}}" class="btn btn-danger">{{_('Redundancy')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
                     </div>
                 </div>
             </div><!-- col-sm-9 -->
