--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -72,7 +72,7 @@
                             </div>
                             
                             <div id="task_redundancy" class="col-sm-6 col-md-4">
-                                <a href="{{url_for('project.task_n_contributions', short_name=project.short_name)}}" rel="nofollow">
+                                <a href="{{url_for('project.task_n_answers', short_name=project.short_name)}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-repeat fa-4x"></i>
                                         <h3 class="margin-bottom-xs"> {{_('Task Redundancy')}}</h3>
