--- a/templates/projects/actions.html
+++ b/templates/projects/actions.html
@@ -7,7 +7,7 @@
   <div class="row" style="padding-top:20px">
       <hr>
           <div class="col-sm-12 btn-group" style="text-align:center">
-              <a class="btn"   href="{{ url_for('project.update', short_name = project.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the project details') }}</a>
+              <a class="btn"   href="{{ url_for('update_project.update', short_name = project.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the project details') }}</a>
               <a class="btn"   href="{{ url_for('project.task_presenter_editor', short_name = project.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the task presenter') }}</a>
               <a class="btn"   href="{{ url_for('project.import_task', short_name = project.short_name) }}"><i class="glyphicon glyphicon-tasks icon-white"></i> {{ _('Import tasks') }}</a>
               <a class="btn" href="{{ url_for('project.delete', short_name = project.short_name) }}"><i class="glyphicon glyphicon-trash icon-white"></i> {{ _('Delete the project') }}</a>
