Long description placeholder updated

--- a/templates/projects/update.html
+++ b/templates/projects/update.html
@@ -62,10 +62,9 @@
                         
                         á Describe the purpose of the project and what it aims to achieve.
                         á Explain how the project works and how volunteers can help.
-                        á Highlight the reasons why volunteers contributions are essential.
+                        á Highlight the reasons why volunteer contributions are essential.
                         
-                        You can use <a href="https://help.github.com/articles/markdown-basics/" target="_blank">Markdown</a>
-                        to format your description.'), class="form-control", required="required") }}
+                        You can use Markdown to format your description.'), class="form-control", required="required") }}
                 {{ form_helper.render_field(form.category_id, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.allow_anonymous_contributors, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.password, class="form-control", visible='true') }}
