Leader board 'tasks' renamed 'contributions'

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -67,7 +67,7 @@
           {{ account_helper.render_user_thumbnail(user, upload_method, style="height:90px; width:90px;", class="img-circle") }}
              </div>
           </a>
-          <p class="label label-danger">{{user.task_runs}}</p> <p><small> {{_('Tasks')}}</small></p>
+          <p class="label label-danger">{{user.task_runs}}</p> <p><small> {{_('Contributions')}}</small></p>
           </li>
           {% endfor %}
 </ul>
