--- a/templates/projects/update.html
+++ b/templates/projects/update.html
@@ -84,6 +84,9 @@ You can use Markdown to format your description.'), class="form-control", requir
 </div>
 <script>
     $("i[rel='tooltip']").tooltip();
+    $(function() {
+        $('#flickr_link').attr('value', '{{project.info.flickr_link | safe}}');
+    });
 </script>
 <script src="{{url_for('static', filename='js/image_crop.js')}}" type="text/javascript"></script>
 {{ helper.broken_image() }}
