Long description label made visible

--- a/templates/projects/update.html
+++ b/templates/projects/update.html
@@ -64,7 +64,7 @@
             Explain how the project works and how volunteers can help.
             Highlight the reasons why volunteer contributions are essential.
                         
-You can use Markdown to format your description.'), class="form-control", required="required") }}
+You can use Markdown to format your description.'), class="form-control", required="required", visible='true') }}
                 {{ form_helper.render_field(form.category_id, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.allow_anonymous_contributors, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.password, class="form-control", visible='true') }}
